# vyasa

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  deploy.yml
src/: indicators.rs  lib.rs  main.rs  models.rs  scoring.rs
static/: app.js  index.html  style.css
