[package]
name = "vyasa"
version = "0.1.0"
edition = "2021"
description = "AI text pattern analyzer based on Wikipedia's Signs of AI writing"
authors = ["vyasa contributors"]
license = "MIT"
repository = "https://github.com/mostlyk/no-ai-sherlock"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
lazy_static = "1.4"

wasm-bindgen = { version = "0.2", optional = true }

axum = { version = "0.7", features = ["json", "multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

[dev-dependencies]
tower-test = "0.4"

[features]
default = ["server"]
server = ["axum", "tokio", "tower", "tower-http"]
wasm = ["wasm-bindgen"]

[[bin]]
name = "vyasa"
path = "src/main.rs"
required-features = ["server"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
